fix: Align Profile page header/tabs to common pattern

--- a/frontend/src/app/views/root-profile/root-profile.component.scss
+++ b/frontend/src/app/views/root-profile/root-profile.component.scss
@@ -256,28 +256,6 @@
 
 /*new Design*/
 
-.container {
-    display: flex;
-    flex-direction: column;
-    margin: 42px 48px;
-}
-
-.container>.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.container>.header>h1 {
-    width: 100%;
-    color: #000;
-    font-family: Poppins, serif;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 40px;
-}
-
 .tokenId {
     display: flex;
     white-space: nowrap;
@@ -424,7 +402,6 @@ button[disabled] {
 }
 
 .user-info-container {
-    margin-top: 24px;
     display: flex;
     flex-direction: column;
     grid-row-gap: 16px;
@@ -758,10 +735,6 @@ mat-radio-button {
     margin: 0px !important;
     height: 32px !important;
     min-width: 110px !important;
-}
-
-.tabs-nav {
-    margin: 15px 0 40px;
 }
 
 :host ::ng-deep .p-tab {
